@@ -14,15 +14,15 @@
     ],
     "resp-syntax": [
         "{",
-        "   \"result\": 0",
+        "   \"result\": 0,",
         "   \"arguments\": {",
-        "       \"declined-addresses\": [ [ 0, \"2019-07-30 10:04:28.386733\" ] ]",
-        "       \"reclaimed-declined-addresses\": [ [ 0, \"2019-07-30 10:04:28.386735\" ] ]",
-        "       \"reclaimed-leases\": [ [ 0, \"2019-07-30 10:04:28.386736\" ] ]",
-        "       \"subnet[1].assigned-addresses\": [ [ 0, \"2019-07-30 10:04:28.386740\" ] ]",
-        "       \"subnet[1].declined-addresses\": [ [ 0, \"2019-07-30 10:04:28.386743\" ] ]",
-        "       \"subnet[1].reclaimed-declined-addresses\": [ [ 0, \"2019-07-30 10:04:28.386745\" ] ]",
-        "       \"subnet[1].reclaimed-leases\": [ [ 0, \"2019-07-30 10:04:28.386747\" ] ]",
+        "       \"declined-addresses\": [ [ 0, \"2019-07-30 10:04:28.386733\" ] ],",
+        "       \"reclaimed-declined-addresses\": [ [ 0, \"2019-07-30 10:04:28.386735\" ] ],",
+        "       \"reclaimed-leases\": [ [ 0, \"2019-07-30 10:04:28.386736\" ] ],",
+        "       \"subnet[1].assigned-addresses\": [ [ 0, \"2019-07-30 10:04:28.386740\" ] ],",
+        "       \"subnet[1].declined-addresses\": [ [ 0, \"2019-07-30 10:04:28.386743\" ] ],",
+        "       \"subnet[1].reclaimed-declined-addresses\": [ [ 0, \"2019-07-30 10:04:28.386745\" ] ],",
+        "       \"subnet[1].reclaimed-leases\": [ [ 0, \"2019-07-30 10:04:28.386747\" ] ],",
         "       \"subnet[1].total-addresses\": [ [ 200, \"2019-07-30 10:04:28.386719\" ] ]",
         "       }",
         "}"
